<resources>
    <string name="app_name">CSN</string>
    <string name="app__title_home"><![CDATA[COVID - 19\nStats. & News]]></string>
    <string name="todo">TODO</string>
    <string name="confirmed">Confirmed</string>
    <string name="val_default">00000</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="news">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="covid_19_stats_amp_news"><![CDATA[COVID-19 Stats. & News]]></string>
</resources>