<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TopParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f7"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/gradient">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/india_sf" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/coronadr" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_black"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:padding="5sp"
                        android:text="@string/app__title_home"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="23sp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-40dp"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#fff"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|center_horizontal"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/confirmed"
                            android:textAllCaps="true"
                            android:textColor="#34c1ae"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/confirm" />

                        <TextView
                            android:id="@+id/val_confirm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:fontFamily="@font/roboto_black"
                            android:text="@string/val_default"
                            android:textAllCaps="true"
                            android:textColor="#34c1ae"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#fff"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|center_horizontal"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/active"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/active" />

                        <TextView
                            android:id="@+id/val_active"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:fontFamily="@font/roboto_black"
                            android:text="@string/val_default"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#fff"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|center_horizontal"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/recovered"
                            android:textAllCaps="true"
                            android:textColor="#f9bb04"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/recover" />

                        <TextView
                            android:id="@+id/val_recover"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:fontFamily="@font/roboto_black"
                            android:text="@string/val_default"
                            android:textAllCaps="true"
                            android:textColor="#f9bb04"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#fff"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|center_horizontal"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/deaths"
                            android:textAllCaps="true"
                            android:textColor="#f44336"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/death" />

                        <TextView
                            android:id="@+id/val_death"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:fontFamily="@font/roboto_black"
                            android:text="@string/val_default"
                            android:textAllCaps="true"
                            android:textColor="#f44336"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>